# learn-webgl2-in-rescript

./: .gitignore  README.md  bun.lockb  index.html  package.json  rescript.json  vite.config.js
plugins/: postcss-scale-px.js
src/: Index.res  Renderer.res  Resize.res  Texture.res  WebGL.res  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: base64.rs  format.rs  main.rs
src/Plugins/: GlobalShortcut.res  Open.res
src/Screens/: App.res
src/Utilities/: Native.res  Renderer.res  Texture.res  WebGL.res  Window.res
src/assets/scss/: App.scss  Main.module.scss
src/assets/scss/fonts/: _font.scss
